# lite-xl

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-format-include  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lite_project.lua  .travis.yml  ARCHITECTURE.md  BASE-ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  HOW_TO_BUILD.md  LICENSE  PLAN.md  README.md  STARTER_CONTRIBUTIONS.md  build-package-meson.sh  build-packages.sh  build-x86-64.lhelper  build-x86.lhelper  build.lhelper  build.sh  build_plugin.sh  changelog.md  generate_header.sh  lite_plugin_api.h  manifest.json  meson.build  meson_options.txt  notes-repl.md  notes.md  notes.txt  replview.try1.lua  run-local  sample_plugin.c  xmake.lua
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/workflows/: auto_labeler_pr.yml  build.yml  postrelease.yml  release.yml  winget-release.yml
cmake/: FindFreetype.cmake  FindLua.cmake  FindPCRE2.cmake  FindSDL2.cmake  Findlua.cmake
cmake/lua/: lua-unicode.diff
data/: meson.build
data/colors/: breakers.lua  default.lua  gruvbox-dark.lua  gruvbox-light.lua  oceanic.lua  textadept.lua
data/compat/: init.lua  module.lua
data/core/: InputDoc.lua  agent.lua  ai.lua  bit.lua  command.lua  commandview.lua  common.lua  compat.lua  config.lua  contextmenu.lua  dirwatch.lua  docview.lua  emptyview.lua  font.lua  ime.lua  init.lua  inputtextview.lua  keymap-macos.lua  keymap.lua  logview.lua  modkeys-generic.lua  modkeys-macos.lua  nagview.lua  node.lua  notebook.lua  notebookview.lua  object.lua  process.lua  project.lua  regex.lua  replview.lua  rootview.lua  scrollbar.lua  start.lua  statusview.lua  storage.lua  style.lua  syntax.lua  textediting.lua  titleview.lua  (+10 more)
data/core/commands/: command.lua  contextmenu.lua  core.lua  dialog.lua  doc.lua  docview.lua  drawwhitespace.lua  files.lua  findreplace.lua  log.lua  root.lua  statusbar.lua
data/core/doc/: encodings.lua  highlighter.lua  init.lua  search.lua  translate.lua
data/plugins/: ai_chat.lua  aligncarets.lua  autocomplete.lua  autoreload.lua  autorestart.lua  cache.lua  cli.lua  codefolding.lua  compatibility3.lua  console.lua  contextmenu.lua  detectindent.lua  drawwhitespace.lua  findfile.lua  highlighter.lua  language_c.lua  language_cpp.lua  language_css.lua  language_erb.lua  language_html.lua  language_js.lua  language_lua.lua  language_md.lua  language_nginx.lua  language_python.lua  language_xml.lua  lineguide.lua  linewrapping.lua  macro.lua  meson.build  projectmanager.lua  projectsearch.lua  quote.lua  reflow.lua  regex_find_replace.lua  repl.lua  scale.lua  statusview.lua  tabularize.lua  toolbar.lua  (+4 more)
data/plugins/thread/: channel.c  channel.h  thread.c
data/tests/: ai_tests.lua
data/user/: init.lua
dev-utils/: Info.plist  fontello-config-small.json  fontello-config.json  icon.icns  macos-retina-display.md  notes-keyboard-events.md  project-based-notes.md  repackage.sh  run-local  run-plugin
doc/: contributors.md  default-keymap.md  licenses.md  notes-project-implementation.md  usage.md
docs/: README.md
docs/api/: canvas.lua  dirmonitor.lua  encoding.lua  globals.lua  net.lua  process.lua  regex.lua  renderer.lua  renwindow.lua  shmem.lua  string.lua  (+4 more)
lib/font_renderer/: agg_font_freetype.cpp  agg_lcd_distribution_lut.h  agg_pixfmt_alpha8.h  build.sh  font_renderer.cpp  font_renderer.h  font_renderer_alpha.h  libstdcpp-replace.cpp  meson.build  notes-lite-font-rendering.md
licenses/: licenses.md
modules/: meson.build
resources/: README.md  lhelper-lockfile  lite_xl_plugin_api.h  notes-dmon-integration-2.md  notes-dmon-integration.md  release-notes.md  shell.html
scripts/: README.md  appdmg.sh  appimage.sh  build.sh  common.sh  dmon-test.sh  fontello-config.json  generate-all-in-one.lua  generate-release-notes.sh  generate_header.sh  install-dependencies.sh  lhelper.sh  lite-xl-ubuntu-build.yml  make-universal-binaries.sh  meson-macos-arm64.ini  meson-macos-x86_64.ini  meson.build  msys2-package.sh  package-appimage.sh  package-dmg.sh  package-innosetup.sh  package.sh  repackage-appimage.sh  repackage.sh  run-local  run-local-gsl-shell  run-plugin  source-package.sh  start.lua.in
scripts/ci/: pyproject.toml
src/: CMakeLists.txt  agg_font_freetype.cpp  agg_font_freetype.h  agg_lcd_distribution_lut.h  agg_pixfmt_alpha8.h  agg_pixfmt_bgra32_lcd.h  agg_pixfmt_rgb24_lcd.h  api_require.h  arena_allocator.c  arena_allocator.h  bundle_open.h  bundle_open.m  custom_events.c  custom_events.h  defines.h  dirmonitor.c  dirmonitor.h  dmon.h  font_render_capi.cpp  font_render_capi.h  font_render_lcd.h  font_renderer.cpp  font_renderer.h  font_renderer_alpha.h  fontdesc.c  fontdesc.h  lbitlib.c  log.c  log.h  luapool.c  luapool.h  main.c  meson.build  process.c  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c  renwindow.h  (+13 more)
src/api/: CMakeLists.txt  api.c  api.h  canvas.c  compat.c  compat.h  cp_replace.c  dirmonitor.c  encoding.c  net.c  process.c  regex.c  renderer.c  renderer_font.c  renwindow.c  shmem.c  system.c  utf8.c  utf8_io.c  utf8_os.c  win32_util.h  xio.c  xl_api.c
src/api/dirmonitor/: CMakeLists.txt  dirmonitor.h  dummy.c  fsevents.c  inodewatcher.cpp  inotify.c  kqueue.c  posix_polling.c  win32.c
src/api/process/: process.c  process.h
src/api/utils/: color.c  color.h  colors.c  colors.h  fonts.c  fonts.h  lxlauxlib.c  lxlauxlib.h
src/api/win32/: utf8_io.c  utf8_os.c
src/compat/: compat-5.3.c  compat-5.3.h  lbitlib.c  lprefix.h
src/font/: font.h  freetype.c
subprojects/: freetype2.wrap  harfbuzz.wrap  libagg.wrap  libatures.wrap  lpm.wrap  lua.wrap  luajit.wrap  pcre2.wrap  reproc.wrap  sdl2.wrap  sdl2_net.wrap  uchardet.wrap  zlog.wrap
subprojects/packagefiles/lua/: lua-unicode.diff  lua_conf.patch  meson.build  meson_options.txt
subprojects/packagefiles/lua/src/: utf8_wrappers.c  utf8_wrappers.h
subprojects/packagefiles/luajit/: meson.build
tests/: agg_font_render_test.c  agg_font_render_test.cpp  meson.build  stb_font_render_test.c
xmgr/: config_c2x.lua  freetype2.lua  liblua.lua  prce2.lua  sdl2.lua  sdl2.lua.bak
(+48 files in other folders)
